--- a/Practice 2.html
+++ b/Practice 2.html
@@ -3,16 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
+    <title>CarPage</title>
   </head>
   <body>
     <main>
-      <h1>CatPhotoApp</h1>
+      <h1>Car Page</h1>
       <section>
-        <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <h2>Car Photos</h2>
+        <img src="https://github.com/MrUnknown101331/practicehtml/blob/main/photo-1542362567-b07e54358753.jpg" alt="Photo of a car."></a>
       </section>
       <section>
         <h2>Cat Lists</h2>
